--- a/index.html
+++ b/index.html
@@ -709,10 +709,10 @@
       -->
 
       <section class="section-padding" id="contact">
-
+        
         <h3 class="section-subtitle">Contact</h3>
 
-        <h2 class="section-title">Get In Touch</h2>
+        <h2 class="section-title">Get In Touch(Currentl Not Working)</h2>
 
         <p class="section-desc">If you have any suggestion, project or even you want to say “hello”, please
           fill out the form below and I will reply you shortly.</p>
